--- a/_pages/author-aditya-wagh.html
+++ b/_pages/author-aditya-wagh.html
@@ -1,7 +1,7 @@
 ---
 title: "Aditya"
 layout: default
-permalink: "/author-Aditya-Wagh.html"
+permalink: "/author-aditya-wagh.html"
 ---
 <div class="container">
 <div class="row justify-content-center">
