--- a/_pages/author-vineeth.html
+++ b/_pages/author-vineeth.html
@@ -1,7 +1,7 @@
 ---
 title: "Vineeth"
 layout: default
-permalink: "/author-vineeth.html"
+permalink: "/author-vineeth-mp.html"
 ---
 <div class="container">
 <div class="row justify-content-center">
